--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,21 +4,21 @@ phases:
   pre_build:
     commands:
        - echo Logging / auth in to Amazon ECR
-       - ### aws ecr get-login-password 
+       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 547981473986.dkr.ecr.us-east-1.amazonaws.com
 
   build:
     commands:
       - echo Build started
       - echo Building the docker image
-      - docker build -t yt-video-image .
-      - ### docker tag 
+      - docker build -t my-test-image .
+     
 
 
   post_build:
     commands:
      - echo build completed
      - echo pushing in to docker ECR...
-     - docker push ### 
+     - docker push 547981473986.dkr.ecr.us-east-1.amazonaws.com/my-test-image:latest
      - echo Writing image definition file..
      - printf '[{"name":"%s","imageUri":"%s"}]' "" "" > imagedefinitions.json
 
